--- a/website/newsletter/189/index.mdx
+++ b/website/newsletter/189/index.mdx
@@ -131,6 +131,6 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 ## 🤭 Fun {#fun}
 
-[![Dirty code](/emails/issues/189/meme.jpg)](https://x.com/potetotes/status/1799527713952166383)
+[![tailwind monitor](/emails/issues/189/meme.jpg)](https://x.com/thekitze/status/1788852862669217805)
 
 See ya! 👋
