--- a/website/newsletter/189/index.mdx
+++ b/website/newsletter/189/index.mdx
@@ -7,7 +7,9 @@ date: 06-12-2024
 
 Hi everyone!
 
-It's Benedikt again. For me, the week's most interesting topics are not big announcements or new releases but rather subtle hints at future work (type-safe routes models coming to Remix, React Compiler coming to Expo, native intents in Expo Router), as well as some online discussions about React Suspense implementation details (`display: none`, and, more importantly, a pretty significant change in parallel fetching behavior with React 19).
+It's [Benedikt](https://x.com/bndkt) again this week, as Sebastien is taking a break.
+
+For me, the week's most interesting topics are not big announcements or new releases but rather subtle hints at future work (type-safe routes models coming to Remix, React Compiler coming to Expo, native intents in Expo Router), as well as some online discussions about React Suspense implementation details (`display: none`, and, more importantly, a pretty significant change in parallel fetching behavior with React 19).
 
 <!-- truncate -->
 
