--- a/website/newsletter/190/index.mdx
+++ b/website/newsletter/190/index.mdx
@@ -119,7 +119,35 @@ This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 <Todo />
 
+This section is authored by [Benedikt](https://twitter.com/bndkt).
+
+---
+
+As there is no “big headline news” this week, I want to take the opportunity to celebrate two projects within the React Native community. The team behind React Native [visionOS received the React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121) in the category “Most Exciting Use of Technology,” and the team at Infinite Red released the [300th episode of the React Native Radio](https://reactnativeradio.com/episodes/rnr-300-special-episode-ask-us-anything) podcast this week. Congratulations to both teams and thank you for the work you all do for our community!
+
+---
+
 - 💸 [WithFrame - Pre-Built React Native Components](https://withfra.me/?utm_source=thisweekinreact&utm_medium=email&utm_campaign=quick-link--3)
+- 🐦 [React Native visionOS receives React Open Source Award](https://x.com/michalchudziak/status/1801632496100008121): Congratulations!
+- 🐦 [New React Native IDE beta with speed improvements](https://x.com/kzzzf/status/1801367065086816449)
+- 👀 [First React Native 0.75 PRs start showing up (e.g. bump dependency to React 19](https://github.com/facebook/react-native/pull/44990) + [#44991](https://github.com/facebook/react-native/pull/44991) + [#44989](https://github.com/facebook/react-native/pull/44989)
+- 👀 [PR: requestIdleCallback in React Native](https://github.com/facebook/react-native/pull/44759): Schedule background and low-priority work on the main event loop.
+- 📖 [Expo Docs: React Compiler - Available from Expo SDK 51 and still experimental, of course](https://docs.expo.dev/guides/react-compiler/)
+- 📜 [Infinite Red maintains a list of the Top React Native Apps](https://shift.infinite.red/top-react-native-apps-1cae78fdee22): I didn’t know Burger King and Pizza Hut apps were built with RN. If you know of a great app that should be on that list, you can nominate it - even if it’s not a fast food chain!
+- 📜 [Reanimated Can Block Your JS Thread](https://andrei-calazans.com/posts/reanimated-blocking-js-thread/): Yes, you can shoot yourself in the foot when using shared values, this is a good reminder to evaluate whether a value needs to be a Shared Value.
+- 📜 [Bringing native AI to your mobile apps with ExecuTorch— part I — iOS](https://blog.swmansion.com/bringing-native-ai-to-your-mobile-apps-with-executorch-part-i-ios-f1562a4556e8)
+- 📜 [Testing Expo Web3 Apps With Wagmi and Anvil](https://www.callstack.com/blog/testing-expo-web3-apps-with-wagmi-and-anvil): Even if you’re like me and instantly fall asleep when you hear the word Web3 these days, this article is a good example walkthrough of different aspects of testing, including mocking.
+- 📜 [Baseball + React Native = Success](https://www.thewidlarzgroup.com/portfolio/flexpro-grip): I love seeing apps built with RN that are a bit unusual (and not just consist of lists of records). This is an example of such an app for the FlexPro Grip, a device that Baseball players use to train their grip.
+- 📜 [The Inner Workings of GPU Rendering for 2D and 3D Graphics](https://www.callstack.com/blog/the-inner-workings-of-gpu-rendering-for-2d-and-3d-graphics)
+- 📦 [react-navigation-bottom-sheet](https://github.com/th3rdwave/react-navigation-bottom-sheet): I’m a big fan of @gorhom/bottom-sheet, this new library integrates it with React Navigation.
+- 📦 [react-native-screens 3.32.0 - Back button display mode on iOS, 𝚗𝚊𝚟𝚒𝚐𝚊𝚝𝚒𝚘𝚗𝙱𝚊𝚛𝚃𝚛𝚊𝚗𝚜𝚕𝚞𝚌𝚎𝚗𝚝 prop on Android](https://github.com/software-mansion/react-native-screens/releases/tag/3.32.0)
+- 📦 [react-native-config 1.5.2 adds visionOS support](https://github.com/lugg/react-native-config/releases/tag/v1.5.2)
+- 📦 [react-native-gesture-handler 2.17.0](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.17.0)
+- 🎙️ [RNR 300 - Special Episode: Ask Us Anything!](https://reactnativeradio.com/episodes/rnr-300-special-episode-ask-us-anything)
+- 🎙️ [Rocket Ship 43 - React Native Best Practices Template with Youssouf El Azizi](https://share.transistor.fm/s/cc24a442)
+- 🎥 [notJust․dev - Building an e-Scooter App with React Native and Mapbox](https://www.youtube.com/live/uxj8jnlooP8)
+- 🎥 [Simon Grimm - 5 React Native Tips to Wow Your Users](https://www.youtube.com/watch?v=pZgjlh5ezd4)
+- 🎥 [Baptiste Devessier - XState at Expo](https://www.youtube.com/watch?v=HuXnUGfHKZs): TIL that Expo Updates uses XState.
 
 ---
 
